finished bird drawing

--- a/birdStyling.css
+++ b/birdStyling.css
@@ -71,6 +71,40 @@ label {
     padding: 2px 4px;
 }
 
+.userChoice {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 700px;
+
+}
+
+.Container {
+    position: relative;
+
+}
+
+
+.primary_color{
+    position: relative;
+    top:3px;
+    left: 3px;
+    border-radius: 2px;
+    width: 40px;
+    height: 15px;
+    border: none;
+    outline: none;
+    -webkit-appearance: none;
+}
+
+.primary_color::-webkit-color-swatch-wrapper {
+    padding: 0;	
+}
+.primary_color::-webkit-color-swatch {
+    border: none;
+}
+
+
 .button:hover {
     background-color: #92c6da;
 }
@@ -83,9 +117,103 @@ label {
 
 .button {
     margin-left: 5px;
+    margin-bottom: 10px;
 }
 
 .headerContainer {
     text-align: center;
     width: 700px;
 }
+
+
+
+
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .javaCode {
+      color: black
+  }
+
+  .modal-body pre {
+      color: black;
+  }
+
+/*--*/
+
+
+
+
+  /* Modal Header */
+.modal-header {
+    padding: 2px 16px;
+    background-color: #79a3b1;
+    color: white;
+  }
+  
+  /* Modal Body */
+  .modal-body {padding: 2px 16px;
+    text-align: left;
+}
+  
+  /* Modal Footer */
+  .modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  
+  /* Add Animation */
+  @keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+  }
