--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 
 body {
+    font-family: 'Montserrat';
     background-color: #456268;
     text-align: center;
     color: #f4f9f9;
@@ -20,7 +21,7 @@ h1 {
 h3 {
     margin: 10px;
     margin-bottom: 20px;
-    font-family: 'Montserrat'
+
 }
 
 
@@ -70,6 +71,7 @@ a:visited {
 }
 
 
+
 .icon {
     width: 100px;
     height: 100px;
@@ -98,4 +100,10 @@ a:visited {
 
 #cat {
     background-image: url('Cat.png');
+}
+
+main {
+    position: relative;
+    top: 150px;
+    transform: scale(1.5);
 }
