--- a/style.css
+++ b/style.css
@@ -58,8 +58,9 @@ h3 {
 }
 
 a {
-    text-decoration: none;
-}
+    color: inherit;
+    text-decoration: inherit;
+  }
 
 a:visited {
     color: #fcf8ec;
